nginx-e-certs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      name: whoami
  template:
    metadata:
      labels:
        name: whoami
    spec:
      containers:
        - name: whoami
          image: quanhua92/whoami:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
