nginx-e-certs/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: whoami-service
spec:
    selector:
        name: whoami
    ports:
        - name: http
          port: 80
          targetPort: 8080
